Completed new design for Xbox web, best seller & popular games sections.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,136 @@
 
     <!-- Why Us section end -->
 
+    <!-- Games Genre section Start -->
 
+    <section class="games-genre">
+        <div class="container games-genre--title">
+            <h2>Games Genres</h2>
+            <span>See all genres</span>
+        </div>
+        <div class="games-genre--frames container">
+            <img src="./images/Game Genere Frames/bg-image-1.png" alt="Strategy">
+            <img src="./images/Game Genere Frames/bg-image-2.png" alt="FPS">
+            <img src="./images/Game Genere Frames/bg-image-3.png" alt="RPG">
+            <img src="./images/Game Genere Frames/bg-image-4.png" alt="Puzzle">
+            <img src="./images/Game Genere Frames/bg-image-5.png" alt="Role Playing">
+            <img src="./images/Game Genere Frames/bg-image-6.png" alt="Sports">
+        </div>
+    </section>
+    <!-- Games Genre section End -->
+
+    <!-- Best Seller Section Start -->
+    <section class="best-seller">
+        <div class="best-seller--title container">
+            <h2>Best Seller Games</h2>
+        </div>
+        <div class="game-cards container">
+            <div class="card">
+                <img src="./images/BestSellerGames/img thumbnail.png" alt="Minecraft">
+                <p>Minecraft</p>
+                <ul>
+                    <li>Rp 260.000</li>
+                    <li><span>90%</span> <s>Rp260.000</s></li>
+                </ul>
+            </div>
+            <div class="card">
+                <img src="./images/BestSellerGames/img thumbnail-1.png" alt="Minecraft">
+                <p>Asphalt 9: Legends</p>
+                <ul>
+                    <li><button class="download-btn"><a href="#">Free Download</a></button></li>
+                </ul>
+            </div>
+            <div class="card">
+                <img src="./images/BestSellerGames/img thumbnail-2.png" alt="Minecraft">
+                <p>The Witcher 3</p>
+                <ul>
+                    <li>Rp 420.000</li>
+                    <li><span>25%</span><s>Rp590.000</s></li>
+                </ul>
+            </div>
+            <div class="card">
+                <img src="./images/BestSellerGames/img thumbnail-3.png" alt="Minecraft">
+                <p>Surving Mars</p>
+                <ul>
+                    <li>Rp 440.000</li>
+                </ul>
+            </div>
+            <div class="slider-btn"><i class="uil uil-angle-right"></i></div>
+        </div>
+    </section>
+    <!-- Best Seller Section End -->
+
+    <!-- Popular section Start -->
+    <section class="popular-games">
+        <div class="container games-genre--title">
+            <h2>Popular Games</h2>
+            <span>Browse all games</span>
+        </div>
+        <div class="game-cards container">
+            <div class="card">
+                <img src="./images/PopularGames/img thumbnail.png" alt="GTA V">
+                <p>GTA V</p>
+                <ul>
+                    <li>Rp 354.000</li>
+                    <li><span>40%</span> <s>Rp590.000</s></li>
+                </ul>
+            </div>
+            <div class="card">
+                <img src="./images/PopularGames/img thumbnail-1.png" alt="Robolox">
+                <p>Robolox</p>
+                <ul>
+                    <li><button class="download-btn"><a href="#">Free Download</a></button></li>
+                </ul>
+            </div>
+            <div class="card">
+                <img src="./images/PopularGames/img thumbnail-2.png" alt="NBA 2k22">
+                <p>NBA 2k22</p>
+                <ul>
+                    <li>Rp 297.000</li>
+                    <li><span>70%</span><s>Rp990.000</s></li>
+                </ul>
+            </div>
+            <div class="card">
+                <img src="./images/BestSellerGames/img thumbnail-3.png" alt="Dead By Daylight">
+                <p>Dead By Daylight</p>
+                <ul>
+                    <li>Rp 214.500</li>
+                    <li><span>50%</span><s>Rp429.000</s></li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <img src="./images/PopularGames/img thumbnail-4.png" alt="ARK: Survival Evolved">
+                <p>ARK: Survival Evolved</p>
+                <ul>
+                    <li>Rp 430.000</li>
+                </ul>
+            </div>
+            <div class="card">
+                <img src="./images/PopularGames/img thumbnail-5.png" alt="Rocket League">
+                <p>Rocket League</p>
+                <ul>
+                    <li><button class="download-btn"><a href="#">Free Download</a></button></li>
+                </ul>
+            </div>
+            <div class="card">
+                <img src="./images/PopularGames/img thumbnail-6.png" alt="Forza Horizon 5">
+                <p>Forza Horizon 5</p>
+                <ul>
+                    <li>Rp 356.000</li>
+                    <li><span>60%</span><s>Rp890.000</s></li>
+                </ul>
+            </div>
+            <div class="card">
+                <img src="./images/PopularGames/img thumbnail-7.png" alt="Cities: Skylines">
+                <p>Cities: Skylines</p>
+                <ul>
+                    <li>Rp 590.000</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- Popular section End -->
     <script>
         var prevScrollpos = window.pageYOffset;
         window.onscroll = function () {
